test/1.4/errors/T_ESYNTAX_old_assignop.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method init() {
    // In DML 1.4, += and friends are statements, not expressions
    /// ERROR ESYNTAX
    if (a += b) ;
}
